# xml-validator-rust

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RULES_REFERENCE.md  docker-compose.yml
documents/: ENV_SETUP.md  PRODUCTION_READY.md  README.md  RENDER_DEPLOYMENT.md
migrations/: 0001_init.sql
rules/: mydata_v1.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: health.rs  mod.rs  validate.rs
src/domain/: classification.rs  enums.rs  invoice.rs  mod.rs  totals.rs  vat.rs
src/persistence/: mod.rs  validation_log.rs
src/utils/: afm.rs  hash.rs  mod.rs
src/validation/: business_rules.rs  diff.rs  mod.rs  result.rs  rules_engine.rs
src/xml/: mod.rs  normalizer.rs  parser.rs
tests/: diff_tests.rs  validation_tests.rs
tests/samples/: FIXED_v01_simple_invoice_1.1.xml  FIXED_v02_multiple_lines_e3.xml  FIXED_v03_credit_note_5.1.xml  FIXED_v04_foreign_currency_usd.xml  FIXED_v05_retail_3.1.xml  fix_afm_numbers.py  fix_all_xmls.py  i01_BR-001_net_mismatch.xml  i02_BR-002_vat_mismatch.xml  i03_BR-003_invalid_issuer_afm.xml  i04_BR-004_invalid_counterpart_afm.xml  i05_BR-005_future_date.xml  i06_BR-006_missing_uid.xml  i07_BR-007_gross_formula_wrong.xml  i08_BR-008_invalid_invoice_type.xml  i09_BR-009_missing_e3_mandatory.xml  i10_BR-010_invalid_e3_category.xml  i11_BR-011_e3_missing_category.xml  i12_BR-012_e3_negative_amount.xml  i13_BR-014_invalid_payment_type.xml  i14_BR-016_missing_exchange_rate.xml  i15_BR-018_credit_note_no_reference.xml  invalid_invoice.xml  test_all_xmls.sh  v03_credit_note_5.1.xml  (+5 more)
