[package]
name = "aade-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }

# Database (Logging only)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utils
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
rust_decimal = { version = "1.40.0", features = ["serde-with-str", "macros"] }
rust_decimal_macros = "1.40.0"
